Bug 239076 - Closing a tab with data in a form does not ask for confirmation
Summary: Closing a tab with data in a form does not ask for confirmation
Status: RESOLVED FIXED
Alias: None
Product: kwebkitpart
Classification: Frameworks and Libraries
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Debian unstable Linux
: NOR major
Target Milestone: ---
Assignee: webkit-bugs-null
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2010-05-28 01:24 UTC by Richard Hartmann
Modified: 2010-06-09 02:59 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Richard Hartmann 2010-05-28 01:24:07 UTC
Version:           unspecified (using KDE 4.4.3) 
OS:                Linux

This is a regression over KHTML.

When you enter some data in a form and close the tab/window, you are not asked for confirmation. All your input is lost.

Reproducible: Always

Steps to Reproduce:
1) Open Konqueror with webkit
2) Navigate to some site with a form
3) Enter data into the form
4) Close the tab or window

Actual Results:  
Tab/window closes without confirmation dialog

Expected Results:  
You are asked if you really want to throw away your input
Comment 1 Dawit Alemayehu 2010-06-09 00:29:39 UTC
SVN commit 1136092 by adawit:

- Warn user when closing a tab that contains form data which has not yet been submitted.

BUG:239076


 M  +5 -0      kwebkitpart.cpp  
 M  +8 -0      kwebkitpart.h  
 M  +8 -0      kwebkitpart_p.cpp  
 M  +2 -0      kwebkitpart_p.h  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1136092
Comment 2 Richard Hartmann 2010-06-09 02:17:21 UTC
Thanks :)

Are you planning to commit this to 4.4 as well so it will be included in 4.4.5?
Comment 3 Dawit Alemayehu 2010-06-09 02:59:23 UTC
(In reply to comment #2)
> Thanks :)
> 
> Are you planning to commit this to 4.4 as well so it will be included in 4.4.5?

kwebkitpart is in extragear and extragear is not versioned...