- Warn user when closing a tab that contains form data which has not yet been submitted.

BUG:239076